# ctoken

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: binary.rs  cli.rs  config.rs  error.rs  format.rs  main.rs  path.rs  tokenize.rs  tokenize_files.rs  walk.rs
src/modes/: recursive.rs
src/output/: json.rs  mod.rs  table.rs  verbose.rs
tests/: e2e.rs
tests/fixtures/mixed/: app.py  pyproject.toml
tests/fixtures/mixed/src/: main.rs
tests/fixtures/python_project/: pyproject.toml
tests/fixtures/python_project/src/: app.py
tests/fixtures/python_project/tests/: test_app.py
tests/fixtures/rust_project/: Cargo.toml  README.md
tests/fixtures/rust_project/src/: lib.rs  main.rs
tests/fixtures/rust_project/tests/: it.rs
