[package]
name = "ctoken"
version = "0.1.0"
edition = "2021"
description = "Count tokens in project files, like cloc but for LLM context estimation"
license = "Apache-2.0"
authors = ["Rimas <rimasz@gmail.com>"]
repository = "https://github.com/RimantasZ/ctoken"
homepage = "https://github.com/RimantasZ/ctoken"

[[bin]]
name = "ctoken"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tiktoken-rs = "0.5"
ignore = "0.4"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
rayon = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.deb]
maintainer = "Rimantas Zukaitis <rimasz@gmail.com>"
copyright = "2024, Rimantas Zukaitis <rimasz@gmail.com>"
extended-description = "Count tokens in project files using tiktoken, like cloc but for LLM context estimation."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ctoken", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ctoken/README", "644"],
]
